assets, iryscc/pk/grep: fix the dark mode

--- a/src/assets/css/_base.scss
+++ b/src/assets/css/_base.scss
@@ -13,7 +13,7 @@
 	{
 		--background: #181819;
 		--foreground: #ededfa;
-		--link--foreground: #1212b3;
+		--link--foreground: #ccccfa;
 		--code--background: #030303;
 		--code--foreground: #cfcfcf;
 	}
