--- a/src/iryscc/pk/grep/index.scss
+++ b/src/iryscc/pk/grep/index.scss
@@ -59,6 +59,7 @@ button:not(:last-child)
 		margin: 0;
 		padding: 0.25rem 0.5rem;
 		background: hsla(0, 0%, 95%, 1);
+		color: hsla(0, 0%, 5%, 1);
 	}
 
 	input {
